# polsl-iwsk

./: .gitignore  CMakeLists.txt  README
Documentation/: rs232-documentation.md
include/hal/: serial_hal.h
include/protocol/: modbus_core.h
include/rs232/: rs232_logic.h
src/: main.c
src/hal/: serial_hal_linux.c  serial_hal_windows.c
src/protocol/: modbus_core.c
src/rs232/: rs232_logic.c
